[package]
name = "to_trait"
description = "A trait with methods similar to .into() and .try_into(), except they take type arguments."
version = "0.1.1"
authors = ["Michael Hewson <michael@michaelhewson.ca>"]
edition = "2018"
repository = "https://github.com/mikeyhew/rust_to_trait"
documentation = "https://docs.rs/to_trait"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
